src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/infinite/mutual-infinite-recursion-with-operators-streams.tessla
def x: Events[Int] := y + 1
def y: Events[Int] := x * 2